change theme and fixed some bugs